# teste-vini

worldcup-bet-analytics/: .env.example  .gitignore  README.md  pyproject.toml  setup.py
worldcup-bet-analytics/bet365_value_finder/: __init__.py  cli.py  clients.py  env.py  matching.py  models.py  prediction.py  recommendation.py  reporting.py  timeutils.py
worldcup-bet-analytics/sample_data/: fixtures.csv  odds.csv  results.csv  stats.csv
worldcup-bet-analytics/sample_data/footystats/: international-fifa-club-world-cup-league-2025-to-2025-stats.csv  international-fifa-club-world-cup-matches-2025-to-2025-stats.csv  international-fifa-club-world-cup-players-2025-to-2025-stats.csv  international-fifa-club-world-cup-teams-2025-to-2025-stats.csv  international-fifa-club-world-cup-teams2-2025-to-2025-stats.csv
worldcup-bet-analytics/tests/: test_prediction.py  test_recommendation.py
