[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "worldcup-bet-analytics"
version = "0.1.0"
description = "CLI para analisar apostas de futebol por valor esperado usando dados publicos e odds de agregadores."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
bet365-value-finder = "bet365_value_finder.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
